// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl should match the snapshot 1`] = `
.c1 {
  font-family: Roboto-Regular;
  font-size: 14px;
  line-height: 21px;
  -webkit-letter-spacing: 0.7px;
  -moz-letter-spacing: 0.7px;
  -ms-letter-spacing: 0.7px;
  letter-spacing: 0.7px;
  color: #111111;
}

.c7 {
  font-family: Roboto-Regular;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.7px;
  -moz-letter-spacing: 0.7px;
  -ms-letter-spacing: 0.7px;
  letter-spacing: 0.7px;
  color: #111111CC;
}

.c4 {
  height: 48px;
  padding: 12px 16px;
  color: #111111;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #dedede;
  box-sizing: border-box;
  width: 100%;
}

.c3 {
  min-height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c2 {
  margin-bottom: 8px;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 8px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1 c2"
    >
      Text Input
    </label>
  </div>
  <div
    class="c3"
  >
    <input
      class="c4"
      data-testid="text-input"
    />
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      <p
        class="c7"
        color="#111111CC"
      >
        Filium morte multavit si sine dubio praeclara sunt
      </p>
    </div>
  </div>
  ,
</div>
`;

exports[`FormControl should match the snapshot for error 1`] = `
.c1 {
  font-family: Roboto-Regular;
  font-size: 14px;
  line-height: 21px;
  -webkit-letter-spacing: 0.7px;
  -moz-letter-spacing: 0.7px;
  -ms-letter-spacing: 0.7px;
  letter-spacing: 0.7px;
  color: #111111;
}

.c7 {
  font-family: Roboto-Regular;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.7px;
  -moz-letter-spacing: 0.7px;
  -ms-letter-spacing: 0.7px;
  letter-spacing: 0.7px;
  color: #dc3545;
}

.c4 {
  height: 48px;
  padding: 12px 16px;
  color: #111111;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #dedede;
  box-sizing: border-box;
  width: 100%;
  color: #111111;
  background-color: #ffffff;
  border-color: #dc3545;
  padding-right: 48px;
}

.c3 {
  min-height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c2 {
  margin-bottom: 8px;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 8px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1 c2"
    >
      Text Input
    </label>
  </div>
  <div
    class="c3"
  >
    <input
      class="c4"
      data-testid="text-input"
    />
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      <p
        class="c7"
        color="#dc3545"
      >
        Filium morte multavit si sine dubio praeclara sunt
      </p>
    </div>
  </div>
  ,
</div>
`;

exports[`FormControl should match the snapshot for success 1`] = `
.c1 {
  font-family: Roboto-Regular;
  font-size: 14px;
  line-height: 21px;
  -webkit-letter-spacing: 0.7px;
  -moz-letter-spacing: 0.7px;
  -ms-letter-spacing: 0.7px;
  letter-spacing: 0.7px;
  color: #111111;
}

.c7 {
  font-family: Roboto-Regular;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.7px;
  -moz-letter-spacing: 0.7px;
  -ms-letter-spacing: 0.7px;
  letter-spacing: 0.7px;
  color: #28a745;
}

.c4 {
  height: 48px;
  padding: 12px 16px;
  color: #111111;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #dedede;
  box-sizing: border-box;
  width: 100%;
  color: #111111;
  background-color: #ffffff;
  border-color: #28a745;
  padding-right: 48px;
}

.c3 {
  min-height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c2 {
  margin-bottom: 8px;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 8px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1 c2"
    >
      Text Input
    </label>
  </div>
  <div
    class="c3"
  >
    <input
      class="c4"
      data-testid="text-input"
    />
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      <p
        class="c7"
        color="#28a745"
      >
        Filium morte multavit si sine dubio praeclara sunt
      </p>
    </div>
  </div>
  ,
</div>
`;
